[package]
name = "webrogue_ios"
version = "0.1.0"
edition = "2021"

[lib]
name = "webrogue_ios"
crate-type = ["staticlib"]

[features]

[dependencies]
anyhow = { version = "1" }
webrogue_runtime = { path = "external/webrogue_rs/crates/runtime" }
webrogue_backend_wasmer = { path = "external/webrogue_rs/crates/backend_wasmer", default-features = false, features = ["jsc"] }
webrogue_wasi_sync = { path = "external/webrogue_rs/crates/wasi_sync" }
webrogue_std_stream_sdl = { path = "external/webrogue_rs/crates/std_stream_sdl", default-features = false }
